# suncli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  README.md  README.zh-CN.md  commit_message.txt  memory.md  pyproject.toml  requirements.txt  test_debug_mode.py  test_layout.py  test_log_config.py  test_logging.py  test_normal_final.py  test_normal_mode.py  test_tool_parser.py  vercel.json
.memory/: MEMORY.md
.tasks/: index.json
api/: index.py
sun_cli/: __init__.py  __main__.py  background.py  chat.py  cli.py  config.py  conflict_resolver.py  context_collector.py  git_helper.py  history.py  input_hints.py  logging_config.py  markdown_render.py  mirror_manager.py  models.py  models_presets.py  notification.py  plan_mode.py  shell.py  smart_git.py  subagent.py  task_manager.py
sun_cli/mcp/: __init__.py  client.py  plugin.py
sun_cli/memory/: __init__.py  manager.py
sun_cli/nudge/: __init__.py  engine.py  review_agent.py
sun_cli/prompts/: __init__.py  manager.py
sun_cli/security/: scanner.py
sun_cli/skills/: __init__.py  config.py  entry.py  git.py  handlers.py  library.py  prompt.py
sun_cli/skills_v2/: __init__.py  manager.py  skill.py  tools.py
sun_cli/task/: __init__.py  scheduler.py
sun_cli/team/: __init__.py  mailbox.py  manager.py  protocol.py  teammate.py
sun_cli/tools/: __init__.py  definitions.py  executor.py  sandbox.py  web_search.py
sun_cli/web/: __init__.py  server.py
sun_cli/worktree/: __init__.py  manager.py
website/: package-lock.json  package.json  tailwind.config.js
website/content/: index.md
(+17 files in other folders)
